clusters/my-cluster/apps/media/lidarr/app/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: lidarr-svc
  namespace: media
subsets:
- addresses:
  - ip: 192.168.0.152
  ports:
  - name: lidarr-app
    port: 80
    protocol: TCP
